syntax = "proto3";
package LimeChain.mantrachain.marketplace.v1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "marketplace/v1/common.proto";

option go_package = "github.com/LimeChain/mantrachain/x/marketplace/types";
option (gogoproto.equal_all) = true;

message CollectionSettings {
  bytes index = 1 [(gogoproto.moretags) = "yaml:\"index\""]; 
  bytes marketplace_index = 2 [(gogoproto.moretags) = "yaml:\"marketplace_index\""]; 
  bool initially_collection_owner_nfts_for_sale = 3 [(gogoproto.moretags) = "yaml:\"initially_collection_owner_nfts_for_sale\""]; 
  cosmos.base.v1beta1.Coin initially_collection_owner_nfts_min_price = 4 [
    (gogoproto.moretags) = "yaml:\"initially_collection_owner_nfts_min_price\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = true
  ]; 
  repeated MarketplaceEarning nfts_earnings_on_sale = 5 [(gogoproto.moretags) = "yaml:\"nfts_earnings_on_sale\""];
  repeated MarketplaceEarning nfts_earnings_on_yield_reward = 6 [(gogoproto.moretags) = "yaml:\"nfts_earnings_on_yield_reward\""];
  string initially_nfts_vault_lock_percentage = 7 [
    (gogoproto.moretags) = "yaml:\"initially_nfts_vault_lock_percentage\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = true
  ]; 
  bytes creator = 8 [
      (gogoproto.moretags) = "yaml:\"creator\"",
      (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
}
